[package]
name = "opengl_guap"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
hecs = "0.10"
raw-window-handle = "0.6.2"
winit = "0.30.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
